--- a/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Controls/Tagging/TagBox.xaml
+++ b/OpenLawOffice.WinClient/OpenLawOffice.WinClient/Controls/Tagging/TagBox.xaml
@@ -8,32 +8,54 @@
              d:DesignHeight="300" d:DesignWidth="300" Height="Auto" Width="Auto" Loaded="UserControl_Loaded">
     <Border CornerRadius="5" BorderBrush="Black" BorderThickness="1" Height="Auto" Width="Auto">
         <ScrollViewer HorizontalScrollBarVisibility="Disabled"  VerticalScrollBarVisibility="Auto">
-            <WrapPanel>
-                <ItemsControl ItemsSource="{Binding}" Name="Readonly" Visibility="Collapsed">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <local:CategoryTag DisplayMode="Readonly" />
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <WrapPanel Height="Auto" Width="Auto"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                </ItemsControl>
-                <ItemsControl ItemsSource="{Binding}" Name="Editable" Visibility="Collapsed" >
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <local:CategoryTag DisplayMode="View" />
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <WrapPanel Height="Auto" Width="Auto"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                </ItemsControl>
-            </WrapPanel>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <WrapPanel Grid.Column="0" Grid.Row="0">
+                    <ItemsControl ItemsSource="{Binding}" Name="Readonly" Visibility="Collapsed">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <local:CategoryTag DisplayMode="Readonly" OnCancel="CategoryTag_OnCancel"
+                                                   OnDelete="CategoryTag_OnDelete" OnSave="CategoryTag_OnSave"/>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel Height="Auto" Width="Auto"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                    </ItemsControl>
+                    <ItemsControl ItemsSource="{Binding}" Name="Editable" Visibility="Collapsed" >
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <local:CategoryTag DisplayMode="View" OnCancel="CategoryTag_OnCancel"
+                                                    OnDelete="CategoryTag_OnDelete" OnSave="CategoryTag_OnSave"/>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel Height="Auto" Width="Auto"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                    </ItemsControl>
+                    <Button Name="Add" Foreground="#000000" FontWeight="UltraBold" Visibility="Visible"
+                        VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Click="Add_Click"
+                        Height="20" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch"
+                        Padding="0" Margin="0 -3 0 0" Content="+" >
+                        <Button.Background>
+                            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                                <GradientStop Color="AliceBlue" Offset="0" />
+                                <GradientStop Color="Azure" Offset="1" />
+                            </LinearGradientBrush>
+                        </Button.Background>
+                    </Button>
+                </WrapPanel>
+                <local:TagCreator x:Name="UITagCreator" OnCancel="TagCreator_OnCancel" OnSave="TagCreator_OnSave" />
+            </Grid>
         </ScrollViewer>
     </Border>
 </UserControl>
