--- a/OpenLawOffice.WebClient/Views/Shared/Site.Master
+++ b/OpenLawOffice.WebClient/Views/Shared/Site.Master
@@ -5,7 +5,7 @@
 <head runat="server">
     <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
     <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="../../Scripts/aciTree/css/aciTree.css" media="all">
+    <link rel="stylesheet" type="text/css" href="../../Scripts/aciTree/css/aciTree.css" media="all" />
 </head>
 
 <body>
@@ -27,11 +27,8 @@
                 <ul>
                     <li><%: Html.ActionLink("New Matter", "Create", "Matters") %></li>
                 </ul>
-                <li>Contacts</li>
-                <ul>
-                    <li>Businesses</li>
-                    <li>Individuals</li>
-                </ul>
+                <li><%: Html.ActionLink("Contacts", "", "Contacts")%></li>
+                <ul></ul>
                 <li>Tasking</li>
                 <ul></ul>
                 <li>Notes</li>
@@ -43,6 +40,7 @@
                 <li>Security</li>
                 <ul>
                     <li><%: Html.ActionLink("Areas", "", "SecurityAreas") %></li>
+                    <li><%: Html.ActionLink("Area Access", "", "SecurityAreaAcls") %></li>
                     <li><%: Html.ActionLink("Users", "", "Users") %></li>
                 </ul>
             </ul>
