--- a/OpenLawOffice.WebClient/Views/Shared/Site.Master
+++ b/OpenLawOffice.WebClient/Views/Shared/Site.Master
@@ -5,6 +5,8 @@
 <head runat="server">
     <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
     <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/jquery-ui-1.10.3.custom.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/jquery-ui-1.10.3.custom.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="../../Scripts/aciTree/css/aciTree.css" media="all" />
 </head>
 
