--- a/OpenLawOffice.WebClient/Views/Shared/Site.Master
+++ b/OpenLawOffice.WebClient/Views/Shared/Site.Master
@@ -5,9 +5,9 @@
 <head runat="server">
     <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
     <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/jquery-ui-1.10.3.custom.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/jquery-ui-1.10.3.custom.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/jquery-ui-1.10.4.custom.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="../../Scripts/aciTree/css/aciTree.css" media="all" />
+    <link rel="stylesheet" type="text/css" href="../../Scripts/jqGrid-4.5.4/ui.jqgrid.css" media="all" />
 </head>
 
 <body>
