New dashboard view shows todo list based on tasks.  Implemented settings on a user level, right now just user task filters.

--- a/OpenLawOffice.WebClient/Views/Shared/Site.Master
+++ b/OpenLawOffice.WebClient/Views/Shared/Site.Master
@@ -55,6 +55,11 @@
                     <li><%: Html.ActionLink("Area Access", "", "SecurityAreaAcls") %></li>
                     <li><%: Html.ActionLink("Users", "", "Users") %></li>
                 </ul>
+                <ul></ul>
+                <li>Settings</li>
+                <ul>
+                    <li><%: Html.ActionLink("Tasks", "Index", "UserTaskSettings")%></li>
+                </ul>
             </ul>
         </div>
         
