--- a/OpenLawOffice.WebClient/Content/Site.css
+++ b/OpenLawOffice.WebClient/Content/Site.css
@@ -422,3 +422,14 @@ a.btn-timeentry
     height: 16px;
     text-indent: -9999px; /* hide text */
 }
+
+a.btn-settinggo
+{
+    background-image: url('fugue-icons-3.5.6/icons-shadowless/gear-arrow.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    text-indent: -9999px; /* hide text */
+}
