Calendaring now supporting firm wide, per user or per contact.

--- a/OpenLawOffice.WebClient/Views/Shared/Site.Master
+++ b/OpenLawOffice.WebClient/Views/Shared/Site.Master
@@ -70,6 +70,8 @@
                     Calendar</li>
                 <ul>
                     <li>
+                        <%: Html.ActionLink("Master", "Index", "Calendar", null, null) %></li>
+                    <li>
                         <%: Html.ActionLink("User", "SelectUser", "Calendar", null, null) %></li>
                     <li>
                         <%: Html.ActionLink("Contact", "SelectContact", "Calendar", null, null) %></li>
