--- a/OpenLawOffice.WebClient/Views/Shared/Calendar.Master
+++ b/OpenLawOffice.WebClient/Views/Shared/Calendar.Master
@@ -57,9 +57,11 @@
                             Calendar</li>
                         <ul>
                             <li>
+                                <%: Html.ActionLink("Master", "Index", "Calendar", null, null) %></li>
+                            <li>
                                 <%: Html.ActionLink("User", "SelectUser", "Calendar", null, null) %></li>
-                        <li>
-                            <%: Html.ActionLink("Contact", "SelectContact", "Calendar", null, null) %></li>
+                            <li>
+                                <%: Html.ActionLink("Contact", "SelectContact", "Calendar", null, null) %></li>
                         </ul>
                         <li>
                             <%: Html.ActionLink("Matters", "", "Matters") %></li>
