Implemented management of event and matter relationships.

--- a/OpenLawOffice.WebClient/Content/Site.css
+++ b/OpenLawOffice.WebClient/Content/Site.css
@@ -460,3 +460,14 @@ a.btn-settinggo
     height: 16px;
     text-indent: -9999px; /* hide text */
 }
+
+a.btn-assignevent
+{
+    background-image: url('fugue-icons-3.5.6/icons-shadowless/calendar-arrow.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    text-indent: -9999px; /* hide text */
+}
