--- a/OpenLawOffice.WebClient/Views/Shared/Site.Master
+++ b/OpenLawOffice.WebClient/Views/Shared/Site.Master
@@ -6,14 +6,14 @@
     <title>
         <asp:ContentPlaceHolder ID="TitleContent" runat="server" />
     </title>
-    <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/jquery-ui-1.10.4.custom.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="../../Scripts/jqGrid-4.6.0/ui.jqgrid.css"
+    <link href="/Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="/Content/jquery-ui-1.10.4.custom.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="/Scripts/jqGrid-4.6.0/ui.jqgrid.css"
         media="all" />
-    <link href="../../Content/fullcalendar.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/fullcalendar.print.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="../../Scripts/jquery-1.10.2.js"></script>
-    <script type="text/javascript" src="../../Scripts/jquery-ui-1.10.4.custom.js"></script>    
+    <link href="/Content/fullcalendar.css" rel="stylesheet" type="text/css" />
+    <link href="/Content/fullcalendar.print.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="/Scripts/jquery-1.10.2.js"></script>
+    <script type="text/javascript" src="/Scripts/jquery-ui-1.10.4.custom.js"></script>    
     <script language="javascript">
         $(function () {
             $("#pageInfoDialog").dialog({
