--- a/OpenLawOffice.WebClient/Views/Shared/Site.Master
+++ b/OpenLawOffice.WebClient/Views/Shared/Site.Master
@@ -72,7 +72,7 @@
         </div>
         <div id="main">
             <asp:ContentPlaceHolder ID="MainContent" runat="server" />
-            <div id="footer">
+            <div id="footer">Version: <%: ViewContext.Controller.GetType().Assembly.GetName().Version %> created <%: System.IO.File.GetCreationTime(ViewContext.Controller.GetType().Assembly.Location) %>
             </div>
         </div>
     </div>
